// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UpgradeAcknowledgeModal > Error is shown for failed y-stream approval action 1`] = `
<UpgradeAcknowledgeModal
  automaticUpgradePolicyId="myUpgradePolicyId"
  closeModal={[MockFunction]}
  clusterId="myClusterId"
  isOpen={true}
  modalData={
    Object {
      "fromVersion": "1.2.3",
      "toVersion": "1.3.4",
      "unmetAcknowledgements": Array [
        Object {
          "id": "unMetAck1",
        },
        Object {
          "id": "unMetAck2",
        },
      ],
    }
  }
  setGate={[MockFunction]}
  setUpgradePolicy={[MockFunction]}
>
  <Modal
    className="ocm-upgrade-ack-modal"
    isPending={false}
    isPrimaryDisabled={true}
    modalSize="medium"
    onClose={[Function]}
    onPrimaryClick={[Function]}
    onSecondaryClick={[Function]}
    primaryText="Approve and continue"
    secondaryText="Cancel"
    title="Administrator acknowledgement"
  >
    <Modal
      actions={
        Array [
          <Button
            isDisabled={true}
            onClick={[Function]}
            type="submit"
            variant="primary"
          >
            Approve and continue
          </Button>,
          null,
          <Button
            onClick={[Function]}
            variant="secondary"
          >
            Cancel
          </Button>,
          null,
          false,
        ]
      }
      appendTo={[Function]}
      aria-describedby=""
      aria-label="Administrator acknowledgement"
      aria-labelledby=""
      className="ocm-upgrade-ack-modal"
      hasNoBodyWrapper={false}
      isOpen={true}
      onClose={[Function]}
      ouiaSafe={true}
      showClose={true}
      title="Administrator acknowledgement"
      titleIconVariant={null}
      titleLabel=""
      variant="medium"
    >
      <Portal
        containerInfo={
          <div>
            <div
              class="pf-c-backdrop"
            >
              <div
                class="pf-l-bullseye"
              >
                <div
                  aria-describedby="pf-modal-part-4"
                  aria-label="Administrator acknowledgement"
                  aria-labelledby="pf-modal-part-2 pf-modal-part-3"
                  aria-modal="true"
                  class="pf-c-modal-box ocm-upgrade-ack-modal pf-m-md"
                  data-ouia-component-id="OUIA-Generated-Modal-medium-3"
                  data-ouia-component-type="PF4/ModalContent"
                  data-ouia-safe="true"
                  id="pf-modal-part-2"
                  role="dialog"
                >
                  <button
                    aria-disabled="false"
                    aria-label="Close"
                    class="pf-c-button pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-Modal-medium-3-ModalBoxCloseButton"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 352 512"
                      width="1em"
                    >
                      <path
                        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      />
                    </svg>
                  </button>
                  <header
                    class="pf-c-modal-box__header"
                  >
                    <h1
                      class="pf-c-modal-box__title"
                      id="pf-modal-part-3"
                    >
                      
                      <span
                        class="pf-c-modal-box__title-text"
                      >
                        Administrator acknowledgement
                      </span>
                    </h1>
                  </header>
                  <div
                    class="pf-c-modal-box__body"
                    id="pf-modal-part-4"
                  >
                    <div
                      aria-label="Danger Alert"
                      class="pf-c-alert pf-m-inline pf-m-danger error-box"
                      data-ouia-component-id="OUIA-Generated-Alert-danger-1"
                      data-ouia-component-type="PF4/Alert"
                      data-ouia-safe="true"
                    >
                      <div
                        class="pf-c-alert__icon"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style="vertical-align: -0.125em;"
                          viewBox="0 0 512 512"
                          width="1em"
                        >
                          <path
                            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          />
                        </svg>
                      </div>
                      <h4
                        class="pf-c-alert__title"
                      >
                        <span
                          class="pf-u-screen-reader"
                        >
                          Danger alert:
                        </span>
                        Failed to save administrator acknowledgement.
                      </h4>
                      <div
                        class="pf-c-alert__description"
                      >
                        <span>
                          {"reason":"an error happened"}
                        </span>
                        <br />
                        <span>
                          Operation ID: N/A
                        </span>
                      </div>
                    </div>
                  </div>
                  <footer
                    class="pf-c-modal-box__footer"
                  >
                    <button
                      aria-disabled="true"
                      class="pf-c-button pf-m-primary pf-m-disabled"
                      data-ouia-component-id="OUIA-Generated-Button-primary-5"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe="true"
                      disabled=""
                      type="submit"
                    >
                      Approve and continue
                    </button>
                    <button
                      aria-disabled="false"
                      class="pf-c-button pf-m-secondary"
                      data-ouia-component-id="OUIA-Generated-Button-secondary-5"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                      Cancel
                    </button>
                  </footer>
                </div>
              </div>
            </div>
          </div>
        }
      >
        <ModalContent
          actions={
            Array [
              <Button
                isDisabled={true}
                onClick={[Function]}
                type="submit"
                variant="primary"
              >
                Approve and continue
              </Button>,
              null,
              <Button
                onClick={[Function]}
                variant="secondary"
              >
                Cancel
              </Button>,
              null,
              false,
            ]
          }
          aria-describedby=""
          aria-label="Administrator acknowledgement"
          aria-labelledby=""
          boxId="pf-modal-part-2"
          className="ocm-upgrade-ack-modal"
          descriptorId="pf-modal-part-4"
          hasNoBodyWrapper={false}
          isOpen={true}
          labelId="pf-modal-part-3"
          onClose={[Function]}
          ouiaId="OUIA-Generated-Modal-medium-3"
          ouiaSafe={true}
          showClose={true}
          title="Administrator acknowledgement"
          titleIconVariant={null}
          titleLabel=""
          variant="medium"
        >
          <Backdrop>
            <div
              className="pf-c-backdrop"
            >
              <FocusTrap
                active={true}
                className="pf-l-bullseye"
                focusTrapOptions={
                  Object {
                    "clickOutsideDeactivates": true,
                    "tabbableOptions": Object {
                      "displayCheck": "none",
                    },
                  }
                }
                paused={false}
                preventScrollOnDeactivate={false}
              >
                <div
                  className="pf-l-bullseye"
                >
                  <ModalBox
                    aria-describedby="pf-modal-part-4"
                    aria-label="Administrator acknowledgement"
                    aria-labelledby="pf-modal-part-2 pf-modal-part-3"
                    className="ocm-upgrade-ack-modal"
                    data-ouia-component-id="OUIA-Generated-Modal-medium-3"
                    data-ouia-component-type="PF4/ModalContent"
                    data-ouia-safe={true}
                    id="pf-modal-part-2"
                    style={Object {}}
                    variant="medium"
                  >
                    <div
                      aria-describedby="pf-modal-part-4"
                      aria-label="Administrator acknowledgement"
                      aria-labelledby="pf-modal-part-2 pf-modal-part-3"
                      aria-modal="true"
                      className="pf-c-modal-box ocm-upgrade-ack-modal pf-m-md"
                      data-ouia-component-id="OUIA-Generated-Modal-medium-3"
                      data-ouia-component-type="PF4/ModalContent"
                      data-ouia-safe={true}
                      id="pf-modal-part-2"
                      role="dialog"
                      style={Object {}}
                    >
                      <ModalBoxCloseButton
                        onClose={[Function]}
                        ouiaId="OUIA-Generated-Modal-medium-3"
                      >
                        <Button
                          aria-label="Close"
                          className=""
                          onClick={[Function]}
                          ouiaId="OUIA-Generated-Modal-medium-3-ModalBoxCloseButton"
                          variant="plain"
                        >
                          <ButtonBase
                            aria-label="Close"
                            className=""
                            innerRef={null}
                            onClick={[Function]}
                            ouiaId="OUIA-Generated-Modal-medium-3-ModalBoxCloseButton"
                            variant="plain"
                          >
                            <button
                              aria-disabled={false}
                              aria-label="Close"
                              className="pf-c-button pf-m-plain"
                              data-ouia-component-id="OUIA-Generated-Modal-medium-3-ModalBoxCloseButton"
                              data-ouia-component-type="PF4/Button"
                              data-ouia-safe={true}
                              disabled={false}
                              onClick={[Function]}
                              role={null}
                              type="button"
                            >
                              <TimesIcon
                                color="currentColor"
                                noVerticalAlign={false}
                                size="sm"
                              >
                                <svg
                                  aria-hidden={true}
                                  aria-labelledby={null}
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style={
                                    Object {
                                      "verticalAlign": "-0.125em",
                                    }
                                  }
                                  viewBox="0 0 352 512"
                                  width="1em"
                                >
                                  <path
                                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                  />
                                </svg>
                              </TimesIcon>
                            </button>
                          </ButtonBase>
                        </Button>
                      </ModalBoxCloseButton>
                      <ModalBoxHeader
                        help={null}
                      >
                        <header
                          className="pf-c-modal-box__header"
                        >
                          <ModalBoxTitle
                            id="pf-modal-part-3"
                            title="Administrator acknowledgement"
                            titleIconVariant={null}
                            titleLabel=""
                          >
                            <h1
                              className="pf-c-modal-box__title"
                              id="pf-modal-part-3"
                            >
                              <span
                                className="pf-c-modal-box__title-text"
                              >
                                Administrator acknowledgement
                              </span>
                            </h1>
                          </ModalBoxTitle>
                        </header>
                      </ModalBoxHeader>
                      <ModalBoxBody
                        id="pf-modal-part-4"
                      >
                        <div
                          className="pf-c-modal-box__body"
                          id="pf-modal-part-4"
                        >
                          <ErrorBox
                            message="Failed to save administrator acknowledgement."
                            response={
                              Object {
                                "error": true,
                                "errorCode": undefined,
                                "errorDetails": undefined,
                                "errorMessage": "{\\"reason\\":\\"an error happened\\"}",
                                "fulfilled": false,
                                "internalErrorCode": undefined,
                                "operationID": undefined,
                                "pending": false,
                              }
                            }
                          >
                            <Alert
                              className="error-box"
                              isInline={true}
                              title="Failed to save administrator acknowledgement."
                              variant="danger"
                            >
                              <div
                                aria-label="Danger Alert"
                                className="pf-c-alert pf-m-inline pf-m-danger error-box"
                                data-ouia-component-id="OUIA-Generated-Alert-danger-1"
                                data-ouia-component-type="PF4/Alert"
                                data-ouia-safe={true}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                              >
                                <AlertIcon
                                  variant="danger"
                                >
                                  <div
                                    className="pf-c-alert__icon"
                                  >
                                    <ExclamationCircleIcon
                                      color="currentColor"
                                      noVerticalAlign={false}
                                      size="sm"
                                    >
                                      <svg
                                        aria-hidden={true}
                                        aria-labelledby={null}
                                        fill="currentColor"
                                        height="1em"
                                        role="img"
                                        style={
                                          Object {
                                            "verticalAlign": "-0.125em",
                                          }
                                        }
                                        viewBox="0 0 512 512"
                                        width="1em"
                                      >
                                        <path
                                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                                        />
                                      </svg>
                                    </ExclamationCircleIcon>
                                  </div>
                                </AlertIcon>
                                <h4
                                  className="pf-c-alert__title"
                                >
                                  <span
                                    className="pf-u-screen-reader"
                                  >
                                    Danger alert:
                                  </span>
                                  Failed to save administrator acknowledgement.
                                </h4>
                                <div
                                  className="pf-c-alert__description"
                                >
                                  <span>
                                    {"reason":"an error happened"}
                                  </span>
                                  <br />
                                  <span>
                                    Operation ID: N/A
                                  </span>
                                </div>
                              </div>
                            </Alert>
                          </ErrorBox>
                        </div>
                      </ModalBoxBody>
                      <ModalBoxFooter>
                        <footer
                          className="pf-c-modal-box__footer"
                        >
                          <Button
                            isDisabled={true}
                            key="confirm"
                            onClick={[Function]}
                            type="submit"
                            variant="primary"
                          >
                            <ButtonBase
                              innerRef={null}
                              isDisabled={true}
                              onClick={[Function]}
                              type="submit"
                              variant="primary"
                            >
                              <button
                                aria-disabled={true}
                                aria-label={null}
                                className="pf-c-button pf-m-primary pf-m-disabled"
                                data-ouia-component-id="OUIA-Generated-Button-primary-5"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe={true}
                                disabled={true}
                                onClick={[Function]}
                                role={null}
                                tabIndex={null}
                                type="submit"
                              >
                                Approve and continue
                              </button>
                            </ButtonBase>
                          </Button>
                          <Button
                            key="secondary"
                            onClick={[Function]}
                            variant="secondary"
                          >
                            <ButtonBase
                              innerRef={null}
                              onClick={[Function]}
                              variant="secondary"
                            >
                              <button
                                aria-disabled={false}
                                aria-label={null}
                                className="pf-c-button pf-m-secondary"
                                data-ouia-component-id="OUIA-Generated-Button-secondary-5"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe={true}
                                disabled={false}
                                onClick={[Function]}
                                role={null}
                                type="button"
                              >
                                Cancel
                              </button>
                            </ButtonBase>
                          </Button>
                        </footer>
                      </ModalBoxFooter>
                    </div>
                  </ModalBox>
                </div>
              </FocusTrap>
            </div>
          </Backdrop>
        </ModalContent>
      </Portal>
    </Modal>
  </Modal>
</UpgradeAcknowledgeModal>
`;

exports[`<UpgradeAcknowledgeModal > Errors are shown for failed gates action 1`] = `
<UpgradeAcknowledgeModal
  automaticUpgradePolicyId="myUpgradePolicyId"
  closeModal={[MockFunction]}
  clusterId="myClusterId"
  isOpen={true}
  modalData={
    Object {
      "fromVersion": "1.2.3",
      "toVersion": "1.3.4",
      "unmetAcknowledgements": Array [
        Object {
          "id": "unMetAck1",
        },
        Object {
          "id": "unMetAck2",
        },
      ],
    }
  }
  setGate={[MockFunction]}
  setUpgradePolicy={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "enable_minor_version_upgrades": true,
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <Modal
    className="ocm-upgrade-ack-modal"
    isPending={false}
    isPrimaryDisabled={true}
    modalSize="medium"
    onClose={[Function]}
    onPrimaryClick={[Function]}
    onSecondaryClick={[Function]}
    primaryText="Approve and continue"
    secondaryText="Cancel"
    title="Administrator acknowledgement"
  >
    <Modal
      actions={
        Array [
          <Button
            isDisabled={true}
            onClick={[Function]}
            type="submit"
            variant="primary"
          >
            Approve and continue
          </Button>,
          null,
          <Button
            onClick={[Function]}
            variant="secondary"
          >
            Cancel
          </Button>,
          null,
          false,
        ]
      }
      appendTo={[Function]}
      aria-describedby=""
      aria-label="Administrator acknowledgement"
      aria-labelledby=""
      className="ocm-upgrade-ack-modal"
      hasNoBodyWrapper={false}
      isOpen={true}
      onClose={[Function]}
      ouiaSafe={true}
      showClose={true}
      title="Administrator acknowledgement"
      titleIconVariant={null}
      titleLabel=""
      variant="medium"
    >
      <Portal
        containerInfo={
          <div>
            <div
              class="pf-c-backdrop"
            >
              <div
                class="pf-l-bullseye"
              >
                <div
                  aria-describedby="pf-modal-part-5"
                  aria-label="Administrator acknowledgement"
                  aria-labelledby="pf-modal-part-3 pf-modal-part-4"
                  aria-modal="true"
                  class="pf-c-modal-box ocm-upgrade-ack-modal pf-m-md"
                  data-ouia-component-id="OUIA-Generated-Modal-medium-4"
                  data-ouia-component-type="PF4/ModalContent"
                  data-ouia-safe="true"
                  id="pf-modal-part-3"
                  role="dialog"
                >
                  <button
                    aria-disabled="false"
                    aria-label="Close"
                    class="pf-c-button pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-Modal-medium-4-ModalBoxCloseButton"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 352 512"
                      width="1em"
                    >
                      <path
                        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      />
                    </svg>
                  </button>
                  <header
                    class="pf-c-modal-box__header"
                  >
                    <h1
                      class="pf-c-modal-box__title"
                      id="pf-modal-part-4"
                    >
                      
                      <span
                        class="pf-c-modal-box__title-text"
                      >
                        Administrator acknowledgement
                      </span>
                    </h1>
                  </header>
                  <div
                    class="pf-c-modal-box__body"
                    id="pf-modal-part-5"
                  >
                    <div
                      aria-label="Danger Alert"
                      class="pf-c-alert pf-m-inline pf-m-danger error-box"
                      data-ouia-component-id="OUIA-Generated-Alert-danger-2"
                      data-ouia-component-type="PF4/Alert"
                      data-ouia-safe="true"
                    >
                      <div
                        class="pf-c-alert__icon"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style="vertical-align: -0.125em;"
                          viewBox="0 0 512 512"
                          width="1em"
                        >
                          <path
                            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          />
                        </svg>
                      </div>
                      <h4
                        class="pf-c-alert__title"
                      >
                        <span
                          class="pf-u-screen-reader"
                        >
                          Danger alert:
                        </span>
                        Failed to save administrator acknowledgement.
                      </h4>
                      <div
                        class="pf-c-alert__description"
                      >
                        <span>
                          {"reason":"an error happened"}
                        </span>
                        <br />
                        <span>
                          Operation ID: N/A
                        </span>
                      </div>
                    </div>
                    <div
                      aria-label="Danger Alert"
                      class="pf-c-alert pf-m-inline pf-m-danger error-box"
                      data-ouia-component-id="OUIA-Generated-Alert-danger-3"
                      data-ouia-component-type="PF4/Alert"
                      data-ouia-safe="true"
                    >
                      <div
                        class="pf-c-alert__icon"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style="vertical-align: -0.125em;"
                          viewBox="0 0 512 512"
                          width="1em"
                        >
                          <path
                            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          />
                        </svg>
                      </div>
                      <h4
                        class="pf-c-alert__title"
                      >
                        <span
                          class="pf-u-screen-reader"
                        >
                          Danger alert:
                        </span>
                        Failed to save administrator acknowledgement.
                      </h4>
                      <div
                        class="pf-c-alert__description"
                      >
                        <span>
                          {"reason":"an error happened"}
                        </span>
                        <br />
                        <span>
                          Operation ID: N/A
                        </span>
                      </div>
                    </div>
                  </div>
                  <footer
                    class="pf-c-modal-box__footer"
                  >
                    <button
                      aria-disabled="true"
                      class="pf-c-button pf-m-primary pf-m-disabled"
                      data-ouia-component-id="OUIA-Generated-Button-primary-7"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe="true"
                      disabled=""
                      type="submit"
                    >
                      Approve and continue
                    </button>
                    <button
                      aria-disabled="false"
                      class="pf-c-button pf-m-secondary"
                      data-ouia-component-id="OUIA-Generated-Button-secondary-7"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                      Cancel
                    </button>
                  </footer>
                </div>
              </div>
            </div>
          </div>
        }
      >
        <ModalContent
          actions={
            Array [
              <Button
                isDisabled={true}
                onClick={[Function]}
                type="submit"
                variant="primary"
              >
                Approve and continue
              </Button>,
              null,
              <Button
                onClick={[Function]}
                variant="secondary"
              >
                Cancel
              </Button>,
              null,
              false,
            ]
          }
          aria-describedby=""
          aria-label="Administrator acknowledgement"
          aria-labelledby=""
          boxId="pf-modal-part-3"
          className="ocm-upgrade-ack-modal"
          descriptorId="pf-modal-part-5"
          hasNoBodyWrapper={false}
          isOpen={true}
          labelId="pf-modal-part-4"
          onClose={[Function]}
          ouiaId="OUIA-Generated-Modal-medium-4"
          ouiaSafe={true}
          showClose={true}
          title="Administrator acknowledgement"
          titleIconVariant={null}
          titleLabel=""
          variant="medium"
        >
          <Backdrop>
            <div
              className="pf-c-backdrop"
            >
              <FocusTrap
                active={true}
                className="pf-l-bullseye"
                focusTrapOptions={
                  Object {
                    "clickOutsideDeactivates": true,
                    "tabbableOptions": Object {
                      "displayCheck": "none",
                    },
                  }
                }
                paused={false}
                preventScrollOnDeactivate={false}
              >
                <div
                  className="pf-l-bullseye"
                >
                  <ModalBox
                    aria-describedby="pf-modal-part-5"
                    aria-label="Administrator acknowledgement"
                    aria-labelledby="pf-modal-part-3 pf-modal-part-4"
                    className="ocm-upgrade-ack-modal"
                    data-ouia-component-id="OUIA-Generated-Modal-medium-4"
                    data-ouia-component-type="PF4/ModalContent"
                    data-ouia-safe={true}
                    id="pf-modal-part-3"
                    style={Object {}}
                    variant="medium"
                  >
                    <div
                      aria-describedby="pf-modal-part-5"
                      aria-label="Administrator acknowledgement"
                      aria-labelledby="pf-modal-part-3 pf-modal-part-4"
                      aria-modal="true"
                      className="pf-c-modal-box ocm-upgrade-ack-modal pf-m-md"
                      data-ouia-component-id="OUIA-Generated-Modal-medium-4"
                      data-ouia-component-type="PF4/ModalContent"
                      data-ouia-safe={true}
                      id="pf-modal-part-3"
                      role="dialog"
                      style={Object {}}
                    >
                      <ModalBoxCloseButton
                        onClose={[Function]}
                        ouiaId="OUIA-Generated-Modal-medium-4"
                      >
                        <Button
                          aria-label="Close"
                          className=""
                          onClick={[Function]}
                          ouiaId="OUIA-Generated-Modal-medium-4-ModalBoxCloseButton"
                          variant="plain"
                        >
                          <ButtonBase
                            aria-label="Close"
                            className=""
                            innerRef={null}
                            onClick={[Function]}
                            ouiaId="OUIA-Generated-Modal-medium-4-ModalBoxCloseButton"
                            variant="plain"
                          >
                            <button
                              aria-disabled={false}
                              aria-label="Close"
                              className="pf-c-button pf-m-plain"
                              data-ouia-component-id="OUIA-Generated-Modal-medium-4-ModalBoxCloseButton"
                              data-ouia-component-type="PF4/Button"
                              data-ouia-safe={true}
                              disabled={false}
                              onClick={[Function]}
                              role={null}
                              type="button"
                            >
                              <TimesIcon
                                color="currentColor"
                                noVerticalAlign={false}
                                size="sm"
                              >
                                <svg
                                  aria-hidden={true}
                                  aria-labelledby={null}
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style={
                                    Object {
                                      "verticalAlign": "-0.125em",
                                    }
                                  }
                                  viewBox="0 0 352 512"
                                  width="1em"
                                >
                                  <path
                                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                  />
                                </svg>
                              </TimesIcon>
                            </button>
                          </ButtonBase>
                        </Button>
                      </ModalBoxCloseButton>
                      <ModalBoxHeader
                        help={null}
                      >
                        <header
                          className="pf-c-modal-box__header"
                        >
                          <ModalBoxTitle
                            id="pf-modal-part-4"
                            title="Administrator acknowledgement"
                            titleIconVariant={null}
                            titleLabel=""
                          >
                            <h1
                              className="pf-c-modal-box__title"
                              id="pf-modal-part-4"
                            >
                              <span
                                className="pf-c-modal-box__title-text"
                              >
                                Administrator acknowledgement
                              </span>
                            </h1>
                          </ModalBoxTitle>
                        </header>
                      </ModalBoxHeader>
                      <ModalBoxBody
                        id="pf-modal-part-5"
                      >
                        <div
                          className="pf-c-modal-box__body"
                          id="pf-modal-part-5"
                        >
                          <ErrorBox
                            message="Failed to save administrator acknowledgement."
                            response={
                              Object {
                                "error": true,
                                "errorCode": undefined,
                                "errorDetails": undefined,
                                "errorMessage": "{\\"reason\\":\\"an error happened\\"}",
                                "fulfilled": false,
                                "internalErrorCode": undefined,
                                "operationID": undefined,
                                "pending": false,
                              }
                            }
                          >
                            <Alert
                              className="error-box"
                              isInline={true}
                              title="Failed to save administrator acknowledgement."
                              variant="danger"
                            >
                              <div
                                aria-label="Danger Alert"
                                className="pf-c-alert pf-m-inline pf-m-danger error-box"
                                data-ouia-component-id="OUIA-Generated-Alert-danger-2"
                                data-ouia-component-type="PF4/Alert"
                                data-ouia-safe={true}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                              >
                                <AlertIcon
                                  variant="danger"
                                >
                                  <div
                                    className="pf-c-alert__icon"
                                  >
                                    <ExclamationCircleIcon
                                      color="currentColor"
                                      noVerticalAlign={false}
                                      size="sm"
                                    >
                                      <svg
                                        aria-hidden={true}
                                        aria-labelledby={null}
                                        fill="currentColor"
                                        height="1em"
                                        role="img"
                                        style={
                                          Object {
                                            "verticalAlign": "-0.125em",
                                          }
                                        }
                                        viewBox="0 0 512 512"
                                        width="1em"
                                      >
                                        <path
                                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                                        />
                                      </svg>
                                    </ExclamationCircleIcon>
                                  </div>
                                </AlertIcon>
                                <h4
                                  className="pf-c-alert__title"
                                >
                                  <span
                                    className="pf-u-screen-reader"
                                  >
                                    Danger alert:
                                  </span>
                                  Failed to save administrator acknowledgement.
                                </h4>
                                <div
                                  className="pf-c-alert__description"
                                >
                                  <span>
                                    {"reason":"an error happened"}
                                  </span>
                                  <br />
                                  <span>
                                    Operation ID: N/A
                                  </span>
                                </div>
                              </div>
                            </Alert>
                          </ErrorBox>
                          <ErrorBox
                            message="Failed to save administrator acknowledgement."
                            response={
                              Object {
                                "error": true,
                                "errorCode": undefined,
                                "errorDetails": undefined,
                                "errorMessage": "{\\"reason\\":\\"an error happened\\"}",
                                "fulfilled": false,
                                "internalErrorCode": undefined,
                                "operationID": undefined,
                                "pending": false,
                              }
                            }
                          >
                            <Alert
                              className="error-box"
                              isInline={true}
                              title="Failed to save administrator acknowledgement."
                              variant="danger"
                            >
                              <div
                                aria-label="Danger Alert"
                                className="pf-c-alert pf-m-inline pf-m-danger error-box"
                                data-ouia-component-id="OUIA-Generated-Alert-danger-3"
                                data-ouia-component-type="PF4/Alert"
                                data-ouia-safe={true}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                              >
                                <AlertIcon
                                  variant="danger"
                                >
                                  <div
                                    className="pf-c-alert__icon"
                                  >
                                    <ExclamationCircleIcon
                                      color="currentColor"
                                      noVerticalAlign={false}
                                      size="sm"
                                    >
                                      <svg
                                        aria-hidden={true}
                                        aria-labelledby={null}
                                        fill="currentColor"
                                        height="1em"
                                        role="img"
                                        style={
                                          Object {
                                            "verticalAlign": "-0.125em",
                                          }
                                        }
                                        viewBox="0 0 512 512"
                                        width="1em"
                                      >
                                        <path
                                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                                        />
                                      </svg>
                                    </ExclamationCircleIcon>
                                  </div>
                                </AlertIcon>
                                <h4
                                  className="pf-c-alert__title"
                                >
                                  <span
                                    className="pf-u-screen-reader"
                                  >
                                    Danger alert:
                                  </span>
                                  Failed to save administrator acknowledgement.
                                </h4>
                                <div
                                  className="pf-c-alert__description"
                                >
                                  <span>
                                    {"reason":"an error happened"}
                                  </span>
                                  <br />
                                  <span>
                                    Operation ID: N/A
                                  </span>
                                </div>
                              </div>
                            </Alert>
                          </ErrorBox>
                        </div>
                      </ModalBoxBody>
                      <ModalBoxFooter>
                        <footer
                          className="pf-c-modal-box__footer"
                        >
                          <Button
                            isDisabled={true}
                            key="confirm"
                            onClick={[Function]}
                            type="submit"
                            variant="primary"
                          >
                            <ButtonBase
                              innerRef={null}
                              isDisabled={true}
                              onClick={[Function]}
                              type="submit"
                              variant="primary"
                            >
                              <button
                                aria-disabled={true}
                                aria-label={null}
                                className="pf-c-button pf-m-primary pf-m-disabled"
                                data-ouia-component-id="OUIA-Generated-Button-primary-7"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe={true}
                                disabled={true}
                                onClick={[Function]}
                                role={null}
                                tabIndex={null}
                                type="submit"
                              >
                                Approve and continue
                              </button>
                            </ButtonBase>
                          </Button>
                          <Button
                            key="secondary"
                            onClick={[Function]}
                            variant="secondary"
                          >
                            <ButtonBase
                              innerRef={null}
                              onClick={[Function]}
                              variant="secondary"
                            >
                              <button
                                aria-disabled={false}
                                aria-label={null}
                                className="pf-c-button pf-m-secondary"
                                data-ouia-component-id="OUIA-Generated-Button-secondary-7"
                                data-ouia-component-type="PF4/Button"
                                data-ouia-safe={true}
                                disabled={false}
                                onClick={[Function]}
                                role={null}
                                type="button"
                              >
                                Cancel
                              </button>
                            </ButtonBase>
                          </Button>
                        </footer>
                      </ModalBoxFooter>
                    </div>
                  </ModalBox>
                </div>
              </FocusTrap>
            </div>
          </Backdrop>
        </ModalContent>
      </Portal>
    </Modal>
  </Modal>
</UpgradeAcknowledgeModal>
`;
